# django-newscenter

./: .gitignore  MANIFEST.in  README  README.rst  pyproject.toml  setup.py
cmsplugin_newscenter/: cms_apps.py  cms_plugins.py  cms_toolbars.py  cms_wizards.py  models.py  views.py
cmsplugin_newscenter/migrations/: 0001_initial.py  0002_newscategorypluginmodel.py
example/: manage.py  requirements.txt
example/example/: settings.py  urls.py  wsgi.py
newscenter/: __init__.py  admin.py  cms_app.py  cms_plugins.py  cms_toolbar.py  cms_wizards.py  feeds.py  forms.py  managers.py  models.py  newscenter_settings.py  sitemaps.py  tests.py  urls.py  views.py  widgets.py
newscenter/fixtures/: newsroom.json
newscenter/migrations/: 0001_initial.py  0002_auto_20170120_1355.py  0002_auto_20170124_1042.py  0003_auto_20170120_1356.py  0003_newsroom_website.py  0004_auto_20170509_1455.py  0004_auto_20180104_1119.py  0004_newsroom_website.py  0005_article_audio_file.py  0005_auto_20191125_1814.py  0006_auto__del_field_newsroom_website_short_name.py  0006_merge_20230725_1930.py  0006_newsroom_featured_image.py  0007_auto_20210503_1537.py  0008_auto__add_feed__chg_field_newsfeedpluginmodel_location.py
newscenter/migrations_django/: 0001_initial.py
newscenter/migrations_nositeconfig/: 0001_initial.py  0005_auto__add_feed__add_newsfeedpluginmodel__del_field_newsroom_website_sh.py
newscenter/south_migrations/: 0002_auto__add_contact__add_unique_article_slug.py  0005_auto__add_field_newsroom_website.py  0007_auto__add_newsfeedpluginmodel.py
(+28 files in other folders)
